[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "check_zone_dnssec"
dynamic = ["version"]
license = "MIT"

authors = [
    { name = "Shumon Huque", email = "shuque@gmail.com" },
]
description = "Command line iterative DNS resolver functions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=3.0",
    "dnspython>=2.6.0",
    "resolve @ git+https://github.com/shuque/resolve.git@v0.6.7",
]

[project.urls]
Homepage = "https://github.com/shuque/check_zone_dnssec"
Issues = "https://github.com/shuque/check_zone_dnssec/issues"

[tool.setuptools]
py-modules = []
script-files = ['check_zone_dnssec.py']

[tool.setuptools.dynamic]
version = {attr = "check_zone_dnssec.__version__"}
